# pure_python_salsa_chacha

./: .gitignore  README.md  pure_chacha20.py  pure_salsa20.py  salsa20.py  test_chacha20.py  test_salsa20.py
.github/workflows/: push.yml
chacha20/: pyproject.toml  test_chacha20.py
salsa20/: pure_salsa20.py  pyproject.toml  test_salsa20.py
