[tool.poetry]
name = "pure_chacha20"
version = "0.1.0"
description = "a pure Python implementation of ChaCha20 and XChaCha20"
license = "CC0-1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
repository = "https://github.com/oconnor663/pure_python_salsa_chacha"

[tool.poetry.dependencies]
python = "^3.6"
